# OpenCV-KotlinNative

./: CMakeLists.txt  README.md
KotlinCMakeModule/: CMakeKotlinInformation.cmake  version
samples/SaveImage/: out.kt
samples/cv2_simple_highgui/: cv2-simple-highgui.kt
samples/cv2_simple_run/: cv2-simple-run.kt
samples/hello_lena/c_interop_version/: CInterop.kt
samples/hello_lena/personal_version/: main.kt
samples/image_scale/c_interop_version/: CInterop.kt
src/c_interop/: cppfailed.libcvaux.def  cppfailed.libml.def  libcv.def  libcvaux.def  libcxcore.def  libhighgui.def  libopencv2_core.def  libopencv2_highgui.def  libopencv2_imgproc.def
src/kotlin/: main.kt
src/kotlin/opencv/zxj5470/ext/: StringExt.kt
src/kotlin/opencv/zxj5470/model/: Image.kt  Pixel.kt  Window.kt
